<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context="com.example.bogda.rilhotel.LoginActivity"
    android:gravity="center_horizontal"
    android:background="@drawable/background">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="119dp"
        android:src="@drawable/logo"
        android:layout_marginTop="50dp"/>
    <EditText
        android:id="@+id/editText_username"
        android:layout_width="wrap_content"
        android:width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:background="#ffff"
        android:drawableLeft="@drawable/logo_user"
        android:hint="@string/username"
        />
    <EditText
        android:id="@+id/editText_password"
        android:layout_width="wrap_content"
        android:width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#ffff"
        android:drawableLeft="@drawable/logo_pass"
        android:hint="@string/password"
        />
    <Button
        android:id="@+id/btn_logIn"
        android:layout_width="wrap_content"
        android:width="180dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#578fc6"
        android:text="@string/login"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">
        <TextView
            android:id="@+id/txtView_notRegister"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textColor="#ffff"
            android:text="@string/not_registered"
            />

        <TextView
            android:id="@+id/txtView_register"
            style="bold"
            android:layout_width="70dp"
            android:layout_height="35dp"
            android:paddingLeft="10dp"
            android:text="@string/register"
            android:textColor="#576fc6" />

    </LinearLayout>

</LinearLayout>