<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context="com.example.bogda.rilhotel.RegisterActivity"
    android:gravity="center_horizontal"
    android:background="@drawable/background">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="119dp"
        android:layout_marginTop="5dp"
        android:src="@drawable/logo" />
    <EditText
        android:id="@+id/editText_username"
        android:layout_width="wrap_content"
        android:width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:background="#ffff"
        android:drawableLeft="@drawable/logo_user"
        android:hint="@string/username"
        />
    <EditText
        android:id="@+id/editText_password"
        android:layout_width="wrap_content"
        android:width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#ffff"
        android:drawableLeft="@drawable/logo_pass"
        android:hint="@string/password"
        />
    <EditText
        android:id="@+id/editText_passwordCnf"
        android:layout_width="wrap_content"
        android:width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#ffff"
        android:drawableLeft="@drawable/logo_pass"
        android:hint="@string/confirm_password"
        />
    <EditText
        android:id="@+id/editText_nume"
        android:layout_width="wrap_content"
        android:width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#ffff"
        android:drawableLeft="@drawable/logo_user"
        android:hint="Nume"
        />
    <EditText
        android:id="@+id/editText_prenume"
        android:layout_width="wrap_content"
        android:width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#ffff"
        android:drawableLeft="@drawable/logo_user"
        android:hint="Prenume"
        />
    <EditText
        android:id="@+id/editText_sex"
        android:layout_width="wrap_content"
        android:width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#ffff"
        android:drawableLeft="@drawable/logo_user"
        android:hint="Sex"
        />


    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:width="180dp"
        android:background="#578fc6"
        android:text="@string/button_register" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/already_have_an_account"
            android:textColor="#ffff" />

        <TextView
            android:id="@+id/txtView_login"
            style="bold"
            android:layout_width="70dp"
            android:layout_height="35dp"
            android:paddingLeft="10dp"

            android:text="@string/login"
            android:textColor="#576fc6" />

    </LinearLayout>

</LinearLayout>